<resources>
    <string name="app_name">ΣΔΥ61–4</string>
    <string name="eap_logo">Eap logo</string>
    <string name="open">Open</string>
    <string name="Save">Save</string>
    <string name="internet">Internet</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="create">Create</string>
    <string name="file_title">File Title</string>
    <string name="contents">Contents</string>
    <string name="no_file_title">Set the file name before creating file</string>
    <string name="next_activity">Continue</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_rationale_location">Location permission is needed in order to show location on map</string>
    <string name="register_user_text">Εγγραφή Χρήστη</string>
    <string name="user_namem">Όνομα Χρήστη</string>
    <string name="email">E-Mail</string>
    <string name="password">Κωδικός</string>
    <string name="register">ΕΓΓΡΑΦΗ</string>
    <string name="person">Person</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
</resources>
